--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@
 
 buildscript {
     repositories {
-        jcenter()
-        mavenCentral()
+        jcenter()        
+        maven { url 'https://jitpack.io' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
@@ -16,7 +17,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
